@@ -49,6 +49,11 @@ of service operations that have been performed on the system.
 %{__rm} -rf $RPM_BUILD_ROOT
 
 %changelog
+* Wed Mar 16 2016  Vasant Hegde <hegdevasant at linux.vnet.ibm.com> 1.1.14
+- PowerKVM is a distro, not a platform
+- Replace popen with native time function
+- Code cleanup
+
 * Thu Aug 14 2014  Vasant Hegde <hegdevasant at linux.vnet.ibm.com> 1.1.13
 - Grant permission to link with librtas library
 - Fixed couple of issues in build tool
